<resources>
    <string name="app_name">AniDeko</string>
    <string name="title_home">Главная</string>
    <string name="title_trend">Тренды</string>
    <string name="title_profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AuthText">Войдите или создайте профиль, чтобы открыть для себя весь функционал приложения</string>
    <string name="LosePassword">Забыли пароль?</string>
    <string name="Skip">Пропустить</string>
    <string name="Enter">Войти</string>
    <string name="Save">Сохранить</string>
    <string name="ExitProfile">Выйти из аккаунта</string>
    <string name="Subscribe">Подписчики</string>
    <string name="SearchUsers">Поиск пользователей</string>
    <string name="Registration">Регистрация</string>
    <string name="RegistrationText">Войдите или создайте профиль, чтобы открыть для себя полный функционал приложения</string>
    <string name="AgreeText">Нажимая кнопку продолжить, вы принимаете <a href='https://stackoverflow.com/'> пользовательское соглашение </a> и <a href='https://vk.com/'> правила сообщества </a></string>
    <string name="ProfileSettings">Настройки профиля</string>
    <string name="EditProfileUserPhoto">Изменить аватарку профиля</string>
    <string name="EditProfileUserNickName">Изменить никнейм</string>
    <string name="EditProfileUserStatus">Изменить статус профиля</string>
    <string name="EditProfileUserCover">Изменить обложку профиля</string>
    <string name="VersionCode">1.0.1</string>
    <string name="Search">Поиск</string>
</resources>