<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="match_parent"
    android:background="@color/MainWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Settings.SettingsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/MainWhite"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="16dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:clickable="true"
                    android:id="@+id/BackToProfileButton"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:paddingLeft="10dp"
                    app:tint="@color/MainBlack"
                    android:scaleType="centerCrop"
                    style="?attr/floatingActionButtonSmallStyle"
                    android:backgroundTint="@color/MainWhite"
                    app:srcCompat="@drawable/arrow_back_ios24px" />
                <TextView
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="20dp"
                    android:text="@string/ProfileSettings"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_gravity="left"
                    android:layout_marginLeft="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="18dp"
                    android:text="Кастомизация профиля"/>
                <com.google.android.material.card.MaterialCardView
                    android:layout_margin="8dp"
                    app:cardCornerRadius="6dp"
                    android:layout_width="match_parent"
                    app:cardElevation="6dp"
                    app:strokeWidth="0dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/EditAvatarProfileButton"
                            android:foreground="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:orientation="horizontal">
                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="26dp"
                                app:strokeWidth="0dp"
                                app:cardCornerRadius="4dp"
                                android:layout_marginLeft="16dp"
                                android:layout_gravity="center"
                                app:cardBackgroundColor="@color/MainBlack"
                                android:layout_height="26dp">
                                <ImageView
                                    android:layout_margin="4dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:foreground="@drawable/photo_library24px"
                                    android:foregroundTint="@color/MainWhite" />
                            </com.google.android.material.card.MaterialCardView>
                            <TextView
                                android:layout_marginLeft="8dp"
                                android:layout_gravity="center"
                                android:textColor="@color/MainBlack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14dp"
                                android:text="@string/EditProfileUserPhoto"/>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:rotationY="180"
                                    android:layout_width="14dp"
                                    android:layout_marginRight="14dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="right|center"
                                    android:src="@drawable/arrow_back_ios24px"/>
                            </FrameLayout>
                        </LinearLayout>
                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:id="@+id/EditStatusProfileButton"
                            android:foreground="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:orientation="horizontal">
                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="26dp"
                                app:strokeWidth="0dp"
                                app:cardCornerRadius="4dp"
                                android:layout_marginLeft="16dp"
                                android:layout_gravity="center"
                                app:cardBackgroundColor="@color/MainBlack"
                                android:layout_height="26dp">
                                <ImageView
                                    android:layout_margin="4dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:foreground="@drawable/edit24px"
                                    android:foregroundTint="@color/MainWhite" />
                            </com.google.android.material.card.MaterialCardView>
                            <TextView
                                android:layout_marginLeft="8dp"
                                android:layout_gravity="center"
                                android:textColor="@color/MainBlack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14dp"
                                android:text="@string/EditProfileUserStatus"/>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:rotationY="180"
                                    android:layout_width="14dp"
                                    android:layout_marginRight="14dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="right|center"
                                    android:src="@drawable/arrow_back_ios24px"/>
                            </FrameLayout>
                        </LinearLayout>
                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:id="@+id/EditCoverProfileButton"
                            android:foreground="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:orientation="horizontal">
                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="26dp"
                                app:strokeWidth="0dp"
                                app:cardCornerRadius="4dp"
                                android:layout_marginLeft="16dp"
                                android:layout_gravity="center"
                                app:cardBackgroundColor="@color/MainBlack"
                                android:layout_height="26dp">
                                <ImageView
                                    android:layout_margin="4dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:foreground="@drawable/library_books24px"
                                    android:foregroundTint="@color/MainWhite" />
                            </com.google.android.material.card.MaterialCardView>
                            <TextView
                                android:layout_marginLeft="8dp"
                                android:layout_gravity="center"
                                android:textColor="@color/MainBlack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14dp"
                                android:text="@string/EditProfileUserCover"/>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:rotationY="180"
                                    android:layout_width="14dp"
                                    android:layout_marginRight="14dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="right|center"
                                    android:src="@drawable/arrow_back_ios24px"/>
                            </FrameLayout>
                        </LinearLayout>
                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:id="@+id/EditNickNameProfileButton"
                            android:foreground="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="46dp"
                            android:orientation="horizontal">
                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="26dp"
                                app:strokeWidth="0dp"
                                app:cardCornerRadius="4dp"
                                android:layout_marginLeft="16dp"
                                android:layout_gravity="center"
                                app:cardBackgroundColor="@color/MainBlack"
                                android:layout_height="26dp">
                                <ImageView
                                    android:layout_margin="4dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_gravity="center"
                                    android:foreground="@drawable/person24px"
                                    android:foregroundTint="@color/MainWhite" />
                            </com.google.android.material.card.MaterialCardView>
                            <TextView
                                android:layout_marginLeft="8dp"
                                android:layout_gravity="center"
                                android:textColor="@color/MainBlack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_medium"
                                android:textSize="14dp"
                                android:text="@string/EditProfileUserNickName"/>
                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <ImageView
                                    android:rotationY="180"
                                    android:layout_width="14dp"
                                    android:layout_marginRight="14dp"
                                    android:layout_height="16dp"
                                    android:layout_gravity="right|center"
                                    android:src="@drawable/arrow_back_ios24px"/>
                            </FrameLayout>
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
            <Button
                android:id="@+id/ExitFromAccButton"
                android:backgroundTint="@color/MainWhite"
                app:icon="@drawable/start24px"
                app:iconTint="@color/MainRed"
                android:textColor="@color/MainRed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:stateListAnimator="@null"
                android:textSize="14dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/ExitProfile"/>
        </LinearLayout>

    </FrameLayout>


</FrameLayout>